# AdventOfCode24

day1/: p1.rb  p2.rb
day2/: package-lock.json  package.json  tsconfig.json
day2/src/: p1.ts  p2.ts
day3/: CMakeLists.txt
day3/include/: puzzle1.h  puzzle2.h
day3/src/: puzzle1.c  puzzle2.c
day4/: p1.rb  p2.rb  wordsearch.rb
day5/: p1.py  p2.py
day6/: p1.py
day7/: p1.rb  p2.rb
day8/: CMakeLists.txt
day8/include/: puzzle1.hpp  puzzle2.hpp
day8/src/: puzzle1.cpp  puzzle2.cpp
day9/: CMakeLists.txt  p1.py
day9/include/: puzzle1.hpp
day9/src/: puzzle1.cpp
